# globant_challenge

./: Dockerfile  README.md  challenge 2.1.csv  challenge 2.1.sql  challenge 2.2.csv  challenge 2.2.sql  main.py  pandas_schemas.py  pyproject.toml
